[package]
name = "mini-telnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
match_to_str = "0.1.0"
tokio = { version = "1.32.0", features = ["full"] }
